<resources>
    <string name="app_name">MeanTime</string>

    <!--TemplateEditor-->
    <string name="loading_template_error">Error while loading template</string>
    <string name="template_is_not_loaded">Template is not loaded yet</string>
    <string name="zero_tasks">Tasks cannot be zero</string>
    <string name="template_saved">Template saved</string>

    <!--TaskEditor-->
    <string name="name_is_empty">Name cannot be empty</string>
    <string name="duration_is_zero">Duration cannot be zero</string>

    <string name="ids">id = %1$d</string>
    <string name="enter_name">Name:</string>
    <string name="enter_duration">Enter duration:</string>
    <string name="with_melody">With melody:</string>
    <string name="melody">Melody:</string>
    <string name="vibration_on">Vibration on</string>
    <string name="vibration_off">Vibration off</string>
    <string name="melody_on">Melody on:</string>

    <string name="choose_task_sound">Choose task notification sound</string>
    <string name="default_ringtone">Default</string>

    <string name="duration_is_uncertain">Uncertain</string>

    <!--NavDrawer-->
    <string name="save">Save</string>
    <string name="template_editor">Template editor</string>
    <string name="schema">Schema</string>
    <string name="main_screen">Main screen</string>

    <!--MainScreen-->
    <string name="no_templates">No templates, go to editor?</string>
    <string name="no_templates_found">No templates found, create new?</string>
    <string name="time_remain">Time remain:</string>

    <!--TaskInfoDialog-->
    <string name="duration">Enter duration:</string>
    <string name="start_time">Start time:</string>
    <string name="active">Active for:</string>
    <string name="task_progress">Progress:</string>
    <string name="muffled">Muffled</string>
    <string name="sound_on">Sound on</string>
    <string name="sound_off">Sound off</string>

    <!--WarningInfoDialog-->
    <string name="warning_dialog_description">For the best experience possible please consider this
        warnings. You will be navigated to corresponding solution if you click at them</string>

    <string name="battery_optimization_on">Battery optimization is on</string>
    <string name="battery_optimization_off">Battery optimization is off</string>
    <string name="battery_optimization_description">If app optimization is turned on, built-in timer may work incorrectly</string>

    <string name="notifications_on">Notifications is on</string>
    <string name="notifications_off">Notifications is off</string>
    <string name="notifications_description">To use app in 100% potential, you should turn notifications on</string>
    <string name="notification_settings_path">Battery optimization -> All apps -> %1$s -> Don\'t optimize</string>

    <!--DayService-->
    <string name="channel_id">DayServiceTimer</string>
    <string name="channel_name">Day Timer</string>
    <string name="channel_description">Shows day progress</string>

    <string name="stop">Stop</string>

    <!--AlarmActivity-->
    <string name="end_day">End day</string>
    <string name="completed">Completed</string>
    <string name="next_task">Next task:</string>
    <string name="day_ended">Day Ended!</string>

    <!--Scheme Fragment-->
    <string name="is_active">Active</string>
    <string name="repeat">Repeat</string>
    <string name="no_goals_found">No goals found for this task, create new?</string>
    <string name="goal_name">Goal name:</string>
    <string name="goal_description">Goal description:</string>
    <string name="active_goals">Active</string>
    <string name="completed_goals">Completed</string>
    <string name="ok">OK</string>
    <string name="night_mode">Night mode</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="goals">Goals:</string>
    <string name="based_on_name">Based on name</string>
    <string name="warnings">Warnings</string>
    <string name="tasks">Task count:</string>
    <string name="save_as">Save as</string>
    <string name="open">Open</string>
    <string name="get_next">Get next</string>
    <string name="colon">:</string>


    <!--Font Styles-->
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_bold">sans-serif-medium</string>
    <string name="font_family_light">sans-serif-light</string>

    <string name="start_at">Start at:</string>
    <string name="time_passed">Time passed:</string>
    <string name="time_left">Time left:</string>
    <string name="play">Play</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="time_is_out">Time is out!</string>
    <string name="or">OR</string>
    <string name="current_task">Current task:</string>
    <string name="take_break">Take break</string>
    <string name="prolong">Prolong</string>
    <string name="hour">Hour</string>
    <string name="pick_time">Pick time</string>
    <string name="minute">Minute</string>
    <string name="cancel">Cancel</string>
    <string name="sort">Sort</string>
    <string name="total_duration">Total duration:</string>
    <string name="edit">Edit</string>
    <string name="create_new">Create new</string>
    <string name="used">Used:</string>
    <string name="created">Created:</string>
    <string name="advanced">Advanced</string>
    <string name="set_break">Set break</string>
    <string name="interval">Interval</string>
    <string name="interval_between_breaks">Interval between breaks</string>
    <string name="duration_text">Duration</string>
    <string name="duration_of_the_break">Duration of the break</string>
    <string name="disable">Disable</string>

    <string name="time_with_hours">%1$d h and %2$d min</string>
    <string name="time_without_hours">%1$d min</string>
    <string name="break_format">Interval: %1$s\nDuration: %2$s</string>
    <string name="no_break">No break</string>
    <string name="invalid_break_interval">Break interval can not be 0</string>
    <string name="invalid_break_duration">Break duration can not be 0</string>

    <string name="used_times">%1$d times</string>

</resources>