<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.sillyapps.meantime.ui.goalscreen.GoalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog"
        android:padding="16dp">

        <TextView
            android:id="@+id/goalNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/goalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textMultiLine"
            android:lines="2"
            android:text="@={viewModel.goal.name}"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalNameText"

            style="@style/InputTextStyle"/>

        <TextView
            android:id="@+id/goalDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/goal_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goalName" />

        <EditText
            android:id="@+id/goalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textMultiLine"
            android:lines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/goalDescriptionText"

            android:text="@={viewModel.goal.description}"
            style="@style/InputTextStyle"/>

        <Button
            android:id="@+id/saveGoalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            style="@style/ButtonStyle"

            app:layout_constraintEnd_toEndOf="@+id/goalDescription"
            app:layout_constraintTop_toBottomOf="@+id/goalDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>